2009-08-02 Paul Richardson <phantom_sf at users.sourceforge.net>

	* syncdir.c (sync_playlist):
	  Change to recurse into given sync directory's sub-directories
	  for files. Allows syncing of an hierarchical music directory layout.

2009-07-31 Jorg Schuler <jcsjcs at users.sourceforge.net>

	* po/de.po: updated German catalog. Thanks to Kai-Ove Pietsch.

	* po/*.po: ran "make update-po".

	* src/mp4file.c: dlopen libmp4v2.so instead of libmp4v2.so.0
          to support newer library versions. Closes tracker item
          2820688.

2009-05-10  Maia Kozheva <sikon@ubuntu.com>

	* configure.in:
	  src/mp4file.c:
	  src/mp4file.h:
	  src/misc.c:
	  
      Detect and load libmp4v2 at runtime rather than compile time.

	* src/infodlg.c:
	  src/infodlg.h:
	  src/prefsdlg.c:
	  src/help.c:
	  src/help.h:
	  po/ru.po:

      Update copyright credentials.

2009-04-20  Todd Zullinger  <tmz@pobox.com>

	* scripts/convert-2mp3.sh: Improve lame genre test

	  Lame prints the output of --genre-list to stderr.  The grep
	  for $genre was also too lenient and matched more than it
	  should.

2009-04-18 Jorg Schuler <jcsjcs at users.sourceforge.net>

	* src/display.c
	  src/display_tracks.c
	  data/gtkpod.glade:

	  Clean up statusbar display in main window (remove resize
	  grip when statusbar is not at the rightmost corner).

	  Work around a bug in GTK+ that puts the sensitive area of
	  the resize grip at the wrong position after a resize of the
	  window or hiding of the filter tab arrow by manually
	  updating the contents of the statusbar after a resize and
	  after hiding the arrow.

	  Changes to gtkpod.glade are small but diff is excessive even
	  if saving twice (V3.4.5).

2009-04-18 Jorg Schuler <jcsjcs at users.sourceforge.net>

	* file_itunesdb.c (gp_write_itdb): fix typo.

2009-04-18 Jorg Schuler <jcsjcs at users.sourceforge.net>

	* file_itunesdb.c (create_transfer_information_dialog): keep
          on top of all other windows. Thanks to Daniele Forsi for the