@@ -1,3 +1,9 @@
+2009-08-07 Paul Richardson <phantom_sf at users.sourceforge.net>
+
+	* src/files_itunes.db
+	  Patch because iphones with os 3.0 only have an iTunesCDB
+	  file and no iTunesDB file. Thanks to teuf for patch
+
 2009-08-02 Paul Richardson <phantom_sf at users.sourceforge.net>
 
 	* syncdir.c (sync_playlist):
